registration page changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
       </div>
 
       {% for task in selected_task %}
-      {% if task.selected_task_idx == current_user.id %}
+      {% if task.selected_task_id == current_user.id %}
       <br>
       <div class="cards">
         <div class="card">
