--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
           <h3>To do</h3>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <h3> + </h3>
+          <h3><a href="{{ url_for('add_task') }}">+</a></h3>
         </div>
       </div>
       <br>
@@ -60,7 +60,7 @@
           <h3>In Progress</h3>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <h3> + </h3>
+          <h3><a href="{{ url_for('add_task') }}">+</a></h3>
         </div>
       </div>
       <br>
@@ -108,7 +108,7 @@
           <h3>Done</h3>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <h3> + </h3>
+          <h3><a href="{{ url_for('add_task') }}">+</a></h3>
         </div>
       </div>
       <br>
