--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <div class="main-content">
           <h1 class="head-text">Simple todo</h1>
           <h1 class="head-text">List. Minimalist</h1>
-          <h1 class="head-text">and Bloat free</h1>
+          <h1 class="head-text">and Bloat free!</h1>
 
         <br>
         <h3>Just the features you expect to focus</h3>
