--- a/templates/header.html
+++ b/templates/header.html
@@ -7,15 +7,15 @@
   <title>To do list</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/8e3b14cc0c.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="static/css/styles.css">
+  <script src="https://kit.fontawesome.com/ed3d1a6954.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="">
     <nav class="navbar nvbr navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('mainpage') }}">Turbo List</a>
+        <a class="navbar-brand" href="{{ url_for('mainpage') }}">GET IT DONE<i class="fa-solid fa-pen-to-square ms-2"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,11 +31,22 @@
             <li class="nav-item pad-5">
               <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
+            {% else %}
+            <li class="nav-item pad-5">
+              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            </li>
+            <li class="nav-item pad-5">
+              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            </li>
             {% endif %}
           </ul>
+
           <form class="d-flex" role="search">
+            {% if not current_user.is_authenticated %}
             <a class="btn btn-dark me-2 pe-4 ps-4 dnt-btn" href="{{ url_for('register') }}">Get Started</a>
+            {% endif %}
           </form>
+
         </div>
       </div>
     </nav>
