--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,9 @@
 {% include 'header.html' %}
 
 <div class="container register-section d-flex justify-content-center">
-  <div class="card register-card">
+  <div class="card user-card">
+    <div class="row">
+      <div class="col-lg-5">
         <div class="card-body reg-in">
           <h2>Signup for Turbo List</h2>
           <br>
@@ -21,6 +23,10 @@
             {{ form.add_user(class="btn btn-primary")}}
           </form>
         </div>
+      </div>
+      <div class="col-lg-7 image-register"></div>
+    </div>
+
       </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
